<resources>
    <string name="app_name">Gelombang dan Gempa Bumi</string>
    <string name="todo">TODO</string>
    <string name="universitas_negeri_yogyakarta">Universitas Negeri Yogyakarta</string>
    <string name="program_pascasarjana">Program Pascasarjana</string>
    <string name="gelombang">GELOMBANG DAN GEMPA BUMI</string>
    <string name="untuk_sma_ma_kelas_xi_semester_2">Untuk SMA/MA Kelas XI Semester 2</string>
    <string name="profil">Profil</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="mulai">Mulai</string>
    <string name="stop">Stop</string>
    <string name="beranda">Beranda</string>
    <string name="menu">Menu Utama</string>
    <string name="login_status">Anda sudah login sebagai guru</string>
    <string name="nama_siswa_kelompok">Nama Siswa/Kelompok</string>
    <string name="masuk">MASUK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_guru">LOGIN GURU</string>
    <string name="pendahuluan">Pendahuluan</string>
    <string name="materi">Materi</string>
    <string name="latihan">Latihan</string>
    <string name="diskusi">Diskusi</string>
    <string name="kompetensi_inti_ki">Kompetensi Inti (KI)</string>
    <string name="kompetensi_dasar_kd">Kompetensi Dasar (KD)</string>
    <string name="indikator">Indikator</string>
    <string name="tujuan">Tujuan</string>
    <string name="pengertian_gelombang">Pengertian Gelombang</string>
    <string name="gejala_gelombang">Gejala Gelombang</string>
    <string name="gelombang_stasioner">Gelombang Stasioner</string>
    <string name="sifat_sifat_gelombang">Sifat-Sifat Gelombang</string>
    <string name="kesiagapan">Kesiapsigapan Bencana</string>
    <string name="kesiapsiagaan_terhadap_bencana_gempa_bumi">Kesiapsiagaan Terhadap Bencana Gempa Bumi</string>
    <string name="pertemuan_1">Pertemuan 1</string>
    <string name="pertemuan_2">Pertemuan 2</string>
    <string name="pertemuan_3">Pertemuan 3</string>
    <string name="kirim">KIRIM</string>
    <string name="jawaban">Lembar Jawab</string>
    <string name="pertemuan">Pertemuan %1$d</string>
    <string name="hasil_diskusi">Hasil Diskusi</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="_4">4.</string>
    <string name="_5">5.</string>
    <string name="_6">6.</string>
    <string name="kesimpulan">Kesimpulan</string>
    <string name="pengumpulan_data">Pengumpulan Data</string>
    <string name="analisis_data">Analisis Data</string>
    <string name="sedang_memproses">Sedang memproses…</string>
    <string name="petunjuk">Petunjuk</string>
    <string name="keluar">Keluar</string>
</resources>
