<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ui.HomeActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/gelombang"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/untuk_sma_ma_kelas_xi_semester_2"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_mulai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/start_menu"
        android:padding="10dp"
        android:text="@string/mulai"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_petunjuk"
        app:layout_constraintEnd_toEndOf="@+id/btn_petunjuk"
        app:layout_constraintStart_toStartOf="@+id/btn_petunjuk" />

    <Button
        android:id="@+id/btn_petunjuk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/hint"
        android:padding="10dp"
        android:text="@string/petunjuk"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_tentang"
        app:layout_constraintEnd_toEndOf="@+id/btn_tentang"
        app:layout_constraintStart_toStartOf="@+id/btn_tentang" />
    <Button
        android:id="@+id/btn_tentang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/about"
        android:padding="10dp"
        android:text="@string/tentang_aplikasi"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_profil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/person_man"
        android:padding="10dp"
        android:text="@string/profil"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_tentang"
        app:layout_constraintStart_toStartOf="@+id/btn_tentang"
        app:layout_constraintTop_toBottomOf="@+id/btn_tentang" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/exit"
        android:padding="10dp"
        android:text="@string/keluar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_profil"
        app:layout_constraintStart_toStartOf="@+id/btn_profil"
        app:layout_constraintTop_toBottomOf="@+id/btn_profil" />

</androidx.constraintlayout.widget.ConstraintLayout>