<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.menu.MateriActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/btn_pengertian"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/materi"
        android:padding="10dp"
        android:text="@string/pengertian_gelombang"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_gejala"
        app:layout_constraintEnd_toEndOf="@+id/btn_gejala"
        app:layout_constraintStart_toStartOf="@+id/btn_gejala"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/btn_gejala"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/materi"
        android:padding="10dp"
        android:text="@string/gejala_gelombang"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_stasioner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pengertian" />

    <Button
        android:id="@+id/btn_stasioner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/materi"
        android:padding="10dp"
        android:text="@string/gelombang_stasioner"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sifat"
        app:layout_constraintEnd_toEndOf="@+id/btn_gejala"
        app:layout_constraintStart_toStartOf="@+id/btn_gejala"
        app:layout_constraintTop_toBottomOf="@+id/btn_gejala" />

    <Button
        android:id="@+id/btn_sifat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/materi"
        android:padding="10dp"
        android:text="@string/sifat_sifat_gelombang"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_gempa"
        app:layout_constraintEnd_toEndOf="@+id/btn_stasioner"
        app:layout_constraintStart_toStartOf="@+id/btn_stasioner"
        app:layout_constraintTop_toBottomOf="@+id/btn_stasioner" />

    <Button
        android:id="@+id/btn_gempa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/materi"
        android:padding="10dp"
        android:text="@string/kesiapsiagaan_terhadap_bencana_gempa_bumi"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_gejala"
        app:layout_constraintStart_toStartOf="@+id/btn_gejala"
        app:layout_constraintTop_toBottomOf="@+id/btn_sifat" />
</androidx.constraintlayout.widget.ConstraintLayout>