<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.menu.LatihanActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/btn_pertemuan_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/ic_open_book"
        android:padding="10dp"
        android:text="@string/pertemuan_1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_pertemuan_2"
        app:layout_constraintEnd_toEndOf="@+id/btn_pertemuan_2"
        app:layout_constraintStart_toStartOf="@+id/btn_pertemuan_2" />

    <Button
        android:id="@+id/btn_pertemuan_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="128dp"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/ic_open_book"
        android:padding="10dp"
        android:text="@string/pertemuan_2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/btn_pertemuan_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/gradient_background_round"
        android:drawableStart="@drawable/ic_open_book"
        android:padding="10dp"
        android:text="@string/pertemuan_3"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_pertemuan_2"
        app:layout_constraintStart_toStartOf="@+id/btn_pertemuan_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_pertemuan_2" />
</androidx.constraintlayout.widget.ConstraintLayout>